--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Applications/Xcode.app/Contents/Developer/usr/bin/python3"
+    "python.pythonPath": "/usr/local/opt/python@3.9/bin/python3.9"
 }
