M2 Bilinear running on simple instance

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -79,6 +79,10 @@
         "memory_resource": "cpp",
         "ranges": "cpp",
         "stop_token": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "codecvt": "cpp",
+        "fstream": "cpp",
+        "iomanip": "cpp",
+        "stack": "cpp"
     }
 }
