--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -83,6 +83,8 @@
         "codecvt": "cpp",
         "fstream": "cpp",
         "iomanip": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp"
     }
 }
