--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# ASPI instance, raw experiment outputs, results, image plots (stored in Dropbox)
+instances/
+raw/
+results/
+images/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
