--- a/.gitignore
+++ b/.gitignore
@@ -43,11 +43,11 @@ makefile
 
 # ASPI instance, raw experiment outputs, results, image plots (stored in Dropbox)
 instances/
-raw/
 results/
 images/
 exp/figures/
 exp/instances/
+exp/raw
 exp/*.csv
 exp/*.ipynb
 
